--- a/aula02/styles/index.css
+++ b/aula02/styles/index.css
@@ -6,7 +6,7 @@
   gap: 10px;
   justify-content: center;
   width: 90vw;
-  height: 90vh;
+  height: auto;
   box-shadow: 2px 2px 10px #000;
   border-radius: 10px;
   margin: auto;
