--- a/aula05/src/components/atoms/text-input/styles.css
+++ b/aula05/src/components/atoms/text-input/styles.css
@@ -7,7 +7,7 @@
   border-radius: 4px;
   outline: none;
   border: 1px solid #c9c9c9;
-  width: 400px;
+  max-width: 400px;
 }
 
 .textinput__input::placeholder {
