--- a/aula05/src/components/layout/main-container/styles.css
+++ b/aula05/src/components/layout/main-container/styles.css
@@ -1,9 +1,15 @@
 .maincontainer__wrapper {
-  width: 600px;
+  max-width: 600px;
   height: 100vh;
   display: flex;
   flex-direction: column;
   margin: auto;
   gap: 20px;
   padding: 24px;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .maincontainer__wrapper {
+    padding: 0px;
+  }
 }
