--- a/aula05/src/components/molecules/todo-list/styles.css
+++ b/aula05/src/components/molecules/todo-list/styles.css
@@ -43,3 +43,10 @@
 .todolist__list__wrapper > li:last-child {
   border-bottom: none;
 }
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .todolist__wrapper {
+    height: 100vh;
+    max-width: 100vw;
+  }
+}
