--- a/aula03/styles/styles.css
+++ b/aula03/styles/styles.css
@@ -1,25 +1,50 @@
-* {
+#root {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 250px);
+  padding: 56px;
+  gap: 12px;
+  margin: auto;
+  text-align: center;
+}
+
+body {
   margin: 0;
   padding: 0;
 }
 
-.product-item {
-  width: 300px;
-  height: 250px;
+.item-wrapper {
+  background-color: #e1e1e1;
+  width: 250px;
+  height: 300px;
   display: flex;
-  align-items: flex-start;
   justify-content: center;
+  padding: 10px 0px;
   flex-direction: column;
-  font-weight: 500;
-  font-size: 16px;
-  padding: 16px;
-  gap: 2px;
-  border-radius: 20px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-  margin-bottom: 16px;
-  background-color: rgba(0, 0, 0, 0.1);
+  align-items: center;
+  border-radius: 8px;
 }
 
-li {
-  list-style: none;
+.item-wrapper:hover {
+  transform: rotate3d("45deg");
+  transition: all 5s;
+}
+
+.filter-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  height: 56px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+}
+
+.filter-wrapper > button {
+  border: none;
+  background: rgb(61, 61, 190);
+  color: white;
+  border-radius: 8px;
+  width: 80px;
+  height: 24px;
 }
